--- a/app_config.env
+++ b/app_config.env
@@ -1,7 +1,14 @@
-CLIENT_ID="Enter_the_Application_Id_here" # Application (client) ID of app registration
-CLIENT_CREDENTIAL="Enter_the_Client_Secret_Here"  # Placeholder - for use ONLY during testing.
+# CLIENT_ID="374b0b81-85f5-4358-92b2-c13a2063ae38" # Application (client) ID of app registration
+# CLIENT_CREDENTIAL="1V_8Q~pBXdjgRaLCYNCGwTaNk7s64xKUVCKuHcwp"  # Placeholder - for use ONLY during testing.
+
+
+CLIENT_ID="7511a3ef-5917-470f-a683-6a23cfed91eb" # Application (client) ID of app registration
+CLIENT_CREDENTIAL="Tq68Q~u4ZXGdiIKSBXLG.htmfnd4OeOOpDqjhdsu"  # Placeholder - for use ONLY during testing.
+
+
+
 # In a production app, we recommend you use a more secure method of storing your secret,
-TENANT="fabrikamb2c"
+TENANT="1abc71b9-16f5-43d3-980c-346906ec0e05"
 POLICY="AAD_MULTI"  # Optional to set, see MSALPolicies for different options, default is single AAD (B2B)
 
-CORS_ORIGINS=["http://localhost:5000"]
+CORS_ORIGINS=["http://localhost:3000"]
