--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,29 @@
-uvicorn
-msal
-starlette
-fastapi
-fastapi_msal[full]
-pydantic[dotenv]
-jinja2
-httpx
+anyio==3.6.2
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+cryptography==38.0.3
+fastapi==0.87.0
+fastapi_msal==0.1.7
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+msal==1.20.0
+pycparser==2.21
+pydantic==1.10.2
+PyJWT==2.6.0
+python-dotenv==0.21.0
+python-multipart==0.0.5
+requests==2.28.1
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.0
+starlette==0.21.0
+typing_extensions==4.4.0
+urllib3==1.26.12
+uvicorn==0.19.0
